# CoGAPS_CLI

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  aclocal.m4  clean_and_build  config.h.in  configure  configure.ac
src/: CoGAPS.cpp
